--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,9 +18,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: npm login
-        run: echo "//registry.npmjs.org/:_authToken=${{
-          secrets.NPM_TOKEN
-        }}" > ~/.npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{secrets.NPM_TOKEN}}" > ~/.npmrc
       - name: Publish to npm
         run: npm publish
         env:
